--- a/ConsoleViewer/ConsoleViewer.csproj
+++ b/ConsoleViewer/ConsoleViewer.csproj
@@ -10,9 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConsoleViewer</RootNamespace>
     <AssemblyName>ConsoleViewer</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <StartupObject>ConsoleViewer.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -50,6 +51,10 @@
     <ProjectReference Include="..\SaqFetch\SaqFetch.csproj">
       <Project>{34C9AF7D-23F2-4B9D-AF73-A1F52897EC7F}</Project>
       <Name>SaqFetch</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SaqRepresentation\SaqRepresentation.csproj">
+      <Project>{1E6EA48C-0298-42F7-95B9-6CC830A52E21}</Project>
+      <Name>SaqRepresentation</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
