Monodevelop 3 bravely performs file partition
Also, some really minor stuff (DocumentSource)

--- a/SaqFetch/SaqFetch.csproj
+++ b/SaqFetch/SaqFetch.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DocumentParsingExtensions.cs" />
     <Compile Include="PdfFixHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DocumentSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SaqRepresentation\SaqRepresentation.csproj">
