--- a/SimpleWebQuiz/Web.config
+++ b/SimpleWebQuiz/Web.config
@@ -5,6 +5,7 @@
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </httpHandlers>
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
