--- a/SimpleWebQuiz/SimpleWebQuiz.csproj
+++ b/SimpleWebQuiz/SimpleWebQuiz.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Nancy.Hosting.Aspnet">
       <HintPath>..\lib\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
