--- a/SimpleWebQuiz/SimpleWebQuiz.csproj
+++ b/SimpleWebQuiz/SimpleWebQuiz.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{58E12EAA-0963-48C7-94B8-180F10D29429}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>SimpleWebQuiz</RootNamespace>
     <AssemblyName>SimpleWebQuiz</AssemblyName>
   </PropertyGroup>
