Copy views again...

--- a/SimpleWebQuiz/SimpleWebQuiz.csproj
+++ b/SimpleWebQuiz/SimpleWebQuiz.csproj
@@ -62,9 +62,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Index.sshtml" />
-    <Content Include="Views\MasterPage.sshtml" />
-    <Content Include="Views\Question.sshtml" />
+    <Content Include="Views\Index.sshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\MasterPage.sshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\Question.sshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
 </Project>
