--- a/WebAppSelf/WebAppSelf.csproj
+++ b/WebAppSelf/WebAppSelf.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -43,9 +43,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\SimpleWebQuiz\SimpleWebQuiz.csproj">
+    <ProjectReference Include="..\WebAppAsp\WebAppAsp.csproj">
       <Project>{7C630184-357D-4110-A1D0-5087900F859A}</Project>
-      <Name>SimpleWebQuiz</Name>
+      <Name>WebAppAsp</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
