Added reference, missed by IDE but not the compiler.

--- a/WebAppAsp/WebAppAsp.csproj
+++ b/WebAppAsp/WebAppAsp.csproj
@@ -42,6 +42,7 @@
       <HintPath>..\lib\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -56,7 +57,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>48217</DevelopmentServerPort>
+          <DevelopmentServerPort>43365</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
