Experimental manual nuget introduction

--- a/SaqTests/SaqTests.csproj
+++ b/SaqTests/SaqTests.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="nunit.framework">
-      <HintPath>..\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\Packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
