--- a/SaqFetch/SaqFetch.csproj
+++ b/SaqFetch/SaqFetch.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="itextsharp">
-      <HintPath>..\lib\itextsharp.dll</HintPath>
+      <HintPath>..\Packages\iTextSharp.5.2.0\lib\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
