--- a/WebAppAsp/WebAppAsp.csproj
+++ b/WebAppAsp/WebAppAsp.csproj
@@ -36,10 +36,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Services" />
     <Reference Include="Nancy">
-      <HintPath>..\lib\Nancy.dll</HintPath>
+      <HintPath>..\Packages\Nancy.0.11.0\lib\net40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Nancy.Hosting.Aspnet">
-      <HintPath>..\lib\Nancy.Hosting.Aspnet.dll</HintPath>
+      <HintPath>..\Packages\Nancy.Hosting.Aspnet.0.11.0\lib\net40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
