--- a/WebAppSelf/WebAppSelf.csproj
+++ b/WebAppSelf/WebAppSelf.csproj
@@ -31,10 +31,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Nancy.Hosting.Self">
-      <HintPath>..\lib\Nancy.Hosting.Self.dll</HintPath>
+      <HintPath>..\Packages\Nancy.Hosting.Self.0.11.0\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
     <Reference Include="Nancy">
-      <HintPath>..\lib\Nancy.dll</HintPath>
+      <HintPath>..\Packages\Nancy.0.11.0\lib\net40\Nancy.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
